{
    "version": 1,
    "name": "GameControls",
    "maps": [
        {
            "name": "Player",
            "id": "07aafaa8-d13b-44f9-b5f3-b2cf408fefc4",
            "actions": [
                {
                    "name": "Space",
                    "type": "Button",
                    "id": "51473c1a-1e07-4c5a-9671-713b114326f3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "4d831e1e-3592-44e3-a419-5f13c3cb1e5d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "453f80cb-3a74-46fa-8771-66a2762f548b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "13b02c1b-8521-4ca7-8b0e-8e506d126398",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Space",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32b3fdf0-c0f8-467d-a370-5b6288944165",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a2c7fab-2c12-43ac-a2e4-f3d27f1b7d76",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}